--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,11 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body,
 html {
   font-family: system, -apple-system, BlinkMacSystemFont, "Helvetica Neue",
     "Lucida Grande";
-  background: white;
   padding: 1rem;
   line-height: 1.6;
-}
-h1 {
-  text-align: center;
 }
